# ProjetoIA

./: LICENSE  README.md  pyproject.toml  requirements.txt
semaforo/: main.py  roi.py
src/semafaroIA/: main.py  utils.py
tests/: processa_frame.py  test_estado_desconhecido.py  test_semaforo.py
