[project]
name = "visaocomp-semaforo"
version = "0.1.0"
description = "Projeto de visão computacional para monitoramento de semáforo"
readme = "README.md"
authors = [
    { name = "Pedro Castilhos", email = "pedrocastilhos99@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.10.0.84"
]

[project.scripts]
visaocomp_semaforo = "visaocomp_semaforo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

